--- a/program/app/src/main/res/layout/activity_login.xml
+++ b/program/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,11 @@
     tools:context=".Activity.LoginActivity">
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"></LinearLayout>
+        android:background="@color/bg"
+        android:orientation="vertical">
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
