--- a/program/app/src/main/res/layout/activity_login.xml
+++ b/program/app/src/main/res/layout/activity_login.xml
@@ -21,9 +21,17 @@
             android:layout_marginTop="170dp"
             android:layout_marginRight="30dp"
             android:layout_marginBottom="170dp"
-            android:background="@drawable/background"
+            android:background="@drawable/bacground"
             android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Sign In"
+                android:textSize="25dp"
+                android:gravity="center"
+                android:layout_marginTop="55dp" />
         </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
