master: Menambahkan Login

--- a/program/app/src/main/res/layout/activity_login.xml
+++ b/program/app/src/main/res/layout/activity_login.xml
@@ -51,6 +51,15 @@
                 android:layout_marginRight="20dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="10dp" />
+
+            <Button
+                android:id="@+id/btnLogin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:background="#2196F3"
+
+                android:text="Sign In" />
         </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
