master: menambahkan space didalam teks view

--- a/program/app/src/main/res/layout/activity_login.xml
+++ b/program/app/src/main/res/layout/activity_login.xml
@@ -75,6 +75,11 @@
                     android:layout_marginTop="25dp"
                     android:gravity="center_horizontal"
                     android:text="Belum mempunyai akun ?" />
+
+                <Space
+                    android:layout_width="8dp"
+                    android:layout_height="wrap_content" />
+
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
