master: Menambahkan gambar logo user di activitymain

--- a/program/app/src/main/res/layout/activity_main.xml
+++ b/program/app/src/main/res/layout/activity_main.xml
@@ -45,5 +45,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="85dp"
+            app:srcCompat="@drawable/user" />
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
