master: Menambahkan cdtentang didalam linearlayout horizontal

--- a/program/app/src/main/res/layout/activity_main.xml
+++ b/program/app/src/main/res/layout/activity_main.xml
@@ -64,6 +64,15 @@
                             android:textStyle="bold" />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cdTentang"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_margin="20dp"
+                    android:layout_weight="1"
+                    app:cardBackgroundColor="#E1E3E5"
+                    app:cardCornerRadius="20dp" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
