--- a/program/app/src/main/res/layout/activity_main.xml
+++ b/program/app/src/main/res/layout/activity_main.xml
@@ -80,6 +80,13 @@
                         android:layout_weight="1"
                         android:orientation="vertical">
 
+                        <ImageView
+                            android:id="@+id/imageView5"
+                            android:layout_width="match_parent"
+                            android:layout_height="115dp"
+                            android:layout_margin="15dp"
+                            app:srcCompat="@drawable/info" />
+
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
