--- a/program/app/src/main/res/layout/activity_main.xml
+++ b/program/app/src/main/res/layout/activity_main.xml
@@ -87,6 +87,16 @@
                             android:layout_margin="15dp"
                             app:srcCompat="@drawable/info" />
 
+                        <TextView
+                            android:id="@+id/txProfil"
+                            android:layout_width="match_parent"
+                            android:layout_height="80dp"
+                            android:layout_weight="1"
+                            android:text="Tentang"
+                            android:textAlignment="center"
+                            android:textSize="20sp"
+                            android:textStyle="bold" />
+
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
