--- a/program/app/src/main/res/layout/activity_menu.xml
+++ b/program/app/src/main/res/layout/activity_menu.xml
@@ -7,6 +7,17 @@
     android:layout_height="match_parent"
     tools:context=".Activity.MenuActivity">
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:text="Menu"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
