--- a/program/app/src/main/res/layout/activity_splash.xml
+++ b/program/app/src/main/res/layout/activity_splash.xml
@@ -7,4 +7,14 @@
     android:layout_height="match_parent"
     tools:context=".Activity.SplashActivity">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="252dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo" />
 </androidx.constraintlayout.widget.ConstraintLayout>
