--- a/program/app/src/main/res/layout/activity_signup.xml
+++ b/program/app/src/main/res/layout/activity_signup.xml
@@ -15,5 +15,16 @@
       android:background="@color/bg"
       android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="170dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="170dp"
+        android:background="@drawable/bacground"
+        android:orientation="vertical">
+
+    </LinearLayout>
   </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
