--- a/program/app/src/main/res/layout/activity_signup.xml
+++ b/program/app/src/main/res/layout/activity_signup.xml
@@ -25,6 +25,14 @@
         android:background="@drawable/bacground"
         android:orientation="vertical">
 
+      <TextView
+          android:id="@+id/textView4"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:text="Sign Up"
+          android:textSize="25dp"
+          android:gravity="center"
+          android:layout_marginTop="55dp" />
     </LinearLayout>
   </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
