--- a/program/app/src/main/res/layout/activity_about.xml
+++ b/program/app/src/main/res/layout/activity_about.xml
@@ -12,7 +12,7 @@
         android:id="@+id/linearLayout3"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/bg"
+        android:background="@color/black"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
