--- a/program/app/src/main/res/layout/activity_signup.xml
+++ b/program/app/src/main/res/layout/activity_signup.xml
@@ -52,6 +52,15 @@
           android:layout_marginRight="20dp"
           android:layout_marginLeft="20dp"
           android:layout_marginTop="10dp" />
+
+      <Button
+          android:id="@+id/btnRegis"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_margin="20dp"
+          android:background="#2196F3"
+
+          android:text="Sign Up"/>
     </LinearLayout>
   </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
