--- a/program/app/src/main/res/layout/activity_signup.xml
+++ b/program/app/src/main/res/layout/activity_signup.xml
@@ -61,6 +61,15 @@
           android:background="#2196F3"
 
           android:text="Sign Up"/>
+
+      <LinearLayout
+          android:layout_width="330dp"
+          android:layout_height="wrap_content"
+          android:gravity="center_horizontal"
+          android:layout_marginTop="-25dp"
+          android:orientation="horizontal">
+
+      </LinearLayout>
     </LinearLayout>
   </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
