--- a/program/app/src/main/res/layout/activity_signup.xml
+++ b/program/app/src/main/res/layout/activity_signup.xml
@@ -69,6 +69,13 @@
           android:layout_marginTop="-25dp"
           android:orientation="horizontal">
 
+        <TextView
+            android:id="@+id/txLgn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:gravity="center_horizontal"
+            android:text="Sudah mempunyai akun ?" />
       </LinearLayout>
     </LinearLayout>
   </LinearLayout>
