--- a/program/app/src/main/res/layout/activity_signup.xml
+++ b/program/app/src/main/res/layout/activity_signup.xml
@@ -76,6 +76,15 @@
             android:layout_marginTop="25dp"
             android:gravity="center_horizontal"
             android:text="Sudah mempunyai akun ?" />
+
+        <Space
+            android:id="@+id/txLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:gravity="center_horizontal"
+            android:text="Sign In"
+            android:textColor="#2196F3" />
       </LinearLayout>
     </LinearLayout>
   </LinearLayout>
