--- a/program/app/src/main/res/layout/activity_about.xml
+++ b/program/app/src/main/res/layout/activity_about.xml
@@ -20,5 +20,13 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.2">
 
-    </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="700dp"
+            android:layout_marginTop="230dp"
+            android:background="@drawable/bacground"
+            android:orientation="vertical">
+
+        </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
