--- a/program/app/src/main/res/layout/activity_menu.xml
+++ b/program/app/src/main/res/layout/activity_menu.xml
@@ -11,7 +11,8 @@
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        android:background="@color/bg">
+        android:background="@color/bg"
+        tools:ignore="MissingConstraints">
 
     </FrameLayout>
 
