master : merubah text menjadi membuat akun di login xml

--- a/program/app/src/main/res/layout/activity_login.xml
+++ b/program/app/src/main/res/layout/activity_login.xml
@@ -28,7 +28,7 @@
                 android:id="@+id/textView4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Sign In"
+                android:text="membuat akun"
                 android:textSize="20dp"
                 android:gravity="center"
                 android:layout_marginTop="55dp" />
