master : merubah text sign in ke sebelah kiri

--- a/program/app/src/main/res/layout/activity_login.xml
+++ b/program/app/src/main/res/layout/activity_login.xml
@@ -28,9 +28,9 @@
                 android:id="@+id/textView4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="membuat akun"
+                android:text="Sign in"
                 android:textSize="20dp"
-                android:gravity="center"
+                android:gravity="left"
                 android:layout_marginTop="55dp" />
 
             <EditText
