--- a/program/app/src/main/res/layout/activity_login.xml
+++ b/program/app/src/main/res/layout/activity_login.xml
@@ -46,7 +46,7 @@
                 android:id="@+id/Password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Password"
+                android:hint="Kata Sandi"
                 android:inputType="textPassword"
                 android:layout_marginRight="20dp"
                 android:layout_marginLeft="20dp"
