--- a/program/app/src/main/res/layout/activity_login.xml
+++ b/program/app/src/main/res/layout/activity_login.xml
@@ -37,8 +37,8 @@
                 android:id="@+id/Username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Nama pengguna"
-                android:layout_marginRight="20dp"
+                android:hint="Username"
+                android:layout_marginRight="30dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="40dp" />
 
@@ -46,7 +46,7 @@
                 android:id="@+id/Password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Kata Sandi"
+                android:hint="Password"
                 android:inputType="textPassword"
                 android:layout_marginRight="20dp"
                 android:layout_marginLeft="20dp"
