--- a/program/app/src/main/res/layout/activity_login.xml
+++ b/program/app/src/main/res/layout/activity_login.xml
@@ -57,7 +57,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
-                android:background="#2196F3"
+                android:background="#FFFF00"
 
                 android:text="Sign In" />
 
