--- a/program/app/src/main/res/layout/activity_main.xml
+++ b/program/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
             android:layout_height="700dp"
             android:layout_marginTop="230dp"
             android:background="@drawable/bacground"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="match_parent"
