--- a/program/app/src/main/res/layout/activity_main.xml
+++ b/program/app/src/main/res/layout/activity_main.xml
@@ -24,11 +24,11 @@
             android:layout_height="700dp"
             android:layout_marginTop="230dp"
             android:background="@drawable/bacground"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="220dp"
+                android:layout_height="230dp"
                 android:layout_marginTop="130dp"
                 android:orientation="horizontal">
 
